# SWoT-CLI

./: .gitignore  Cargo.toml  LICENCE.md  README.md
CLI/: Cargo.toml  README.md  apiGateway  semanticMapper  swot-cli.bat  swot-cli.sh  visualization
CLI/Docs/Demo/: Queries.md
CLI/Docs/Demo/Java/: 02_ARQUITECTURA.md  03_IMPLEMENTACION_FRAMEWORK.md  04_CONFIGURACION_DESPLEGIE.md  05_API.md
CLI/Resources/Dockerfiles/: Dockerfile.mosquitto  Dockerfile.sensorSimulator  Dockerfile.visualization
CLI/Resources/Example/API Collection/: API Gateway - Dashboard.bru  API Gateway - Get AirQuality.bru  API Gateway - Get Comfort levels.bru  API Gateway - Get Observations.bru  API Gateway - Get temperature alerts.bru  API Gateway - Humidity status.bru  Dashboard.bru  Reasoner Trigger.bru  Visualizer - Data.bru  bruno.json
CLI/Resources/Example/API Collection/Gateway/: Get AirQuality.bru  Get Comfort levels.bru  Get Observations.bru  Get temperature alerts.bru  Humidity status.bru  Sparql Select.bru
CLI/Resources/Example/API Collection/Reasoner/: Get AirQuality.bru  Get Comfort levels.bru  Get Observations.bru  Get temperature alerts.bru  Humidity status.bru  Reasoner Trigger.bru  Sparql Select.bru
CLI/Resources/Templates/: ApiGateway.java  SemanticMapper.java  SemanticReasoner.java  SensorSimulator.java  SensorSimulatorConfig.java  Visualization.java
CLI/Resources/java/demo/reasoner/resources/: rules.txt
CLI/Resources/project_base/: docker-compose.yml
CLI/src/: config.rs  init.rs  run.rs
CLI/src/initializer/: docker.rs  java.rs  python.rs
CLI/src/utils/: files.rs
(+352 files in other folders)
