[package]
name = "swot_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
reqwest = { version = "0.12.9", features = ["json"] }
zip = "2.2.0"
tempfile = "3.8"
log = "0.4"
env_logger = "0.11.5"
rand = "0.9.0-alpha.2"
