[package]
name = "CLI"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
zip = "0.6"
tempfile = "3.8"
log = "0.4"
env_logger = "0.10"
rand = "0.9.0-alpha.2"
